# tpatools

./: pyproject.toml
src/tpatools/: __init__.py  gfsm.py  interactive.py  parse.py  plot.py  reparse.py  state.py  tools.py
src/tpatools/Scripts/: gfsmscript.py  recurtab.py  tpaplot.py  tpatab.py
